# cv-parser-gradio

./: .gitignore  README.md  cv_parser.py  gradio_app.py  pyproject.toml
src/cv_parser_gradio/: __init__.py  cv_parser.py
